--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll ",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
+    "cypress": "^9.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.4.6",
+    "jest": "^27.4.7",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
     "vite": "^2.7.2"
