--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "jest --watchAll ",
-    "lint": "eslint src",
-    "cypress:open": "cypress open"
+    "lint": "eslint src --fix",
+    "cypress:open": "cypress open",
+    "prepare": "husky install"
   },
   "dependencies": {
     "cypress": "^9.3.1",
@@ -19,6 +20,7 @@
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-testing-library": "^5.0.4",
+    "lint-staged": "^12.3.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -31,9 +33,17 @@
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.4.6",
+    "husky": "^7.0.0",
     "jest": "^27.4.7",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
     "vite": "^2.7.2"
+  },
+  "lint-staged": {
+    "**/*.{js, jsx}": [
+      "yarn lint",
+      "prettier --write",
+      "yarn test --watchAll=false --findRelatedTests --bail"
+    ]
   }
 }
