Fix extra spacing bug in lint-staged file matcher

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "vite": "^2.7.2"
   },
   "lint-staged": {
-    "**/*.{js, jsx}": [
+    "src/**/*.{js,jsx}": [
       "yarn lint",
       "prettier --write",
       "yarn test --watchAll=false --findRelatedTests --bail"
