--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-testing-library": "^5.0.4",
     "husky": "^7.0.0",
     "jest": "^27.4.7",
