--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compilerOptions": {},
   "include": ["./node_modules/cypress", "cypress/**/*.js"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules/", "dist"]
 }
