--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.25.0"
+    "react-hook-form": "^7.25.0",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
