--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
@@ -42,7 +43,8 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.15",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-shim-react-pdf": "^1.0.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
