--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "lint-staged": {
     "src/**/*.{js,jsx}": [
       "yarn lint",
-      "prettier --write"
+      "prettier --write",
+      "yarn test --watchAll=false --bail --findRelatedTests"
     ]
   }
 }
