--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@heroicons/react": "^1.0.5",
     "@react-pdf/renderer": "^2.1.1",
+    "@tailwindcss/forms": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
