--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
       "prettier --write",
       "yarn test --watchAll=false --bail --findRelatedTests"
     ]
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
