--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
