--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@react-pdf/renderer": "^2.1.1",
     "@tailwindcss/forms": "^0.4.0",
