--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
-    "@react-pdf/renderer": "^2.1.1",
     "@tailwindcss/forms": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +24,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -34,6 +33,7 @@
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.4.6",
     "cypress": "^9.3.1",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
@@ -49,8 +49,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.15",
-    "vite": "^2.7.2",
-    "vite-plugin-shim-react-pdf": "^1.0.4"
+    "vite": "^2.7.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
