--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lint-staged": "^12.3.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "tailwindcss": "^3.0.15",
     "vite": "^2.7.2"
   },
